--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     run: react-application
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
   - port: 8080
     targetPort: 80
